fix display dialog box issue on firefox ubuntu

--- a/src/main/webapp/css/matrix.css
+++ b/src/main/webapp/css/matrix.css
@@ -30,7 +30,7 @@
     position: absolute;
     top: 35%;
     left: 35%;
-    width: 320px;
+    width: 400px;
     height: 220px;
 }
 
